--- a/PhotoApp/PhotoApp/Resources/Base.lproj/LaunchScreen.storyboard
+++ b/PhotoApp/PhotoApp/Resources/Base.lproj/LaunchScreen.storyboard
@@ -18,15 +18,17 @@
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="photo-0" translatesAutoresizingMaskIntoConstraints="NO" id="l9U-w2-AtY">
                                 <rect key="frame" x="16" y="75" width="361" height="727"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="727" id="69s-b1-77q"/>
+                                    <constraint firstAttribute="width" constant="361" id="nfv-fl-GVN"/>
+                                </constraints>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="l9U-w2-AtY" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="SeU-aL-l5D"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="l9U-w2-AtY" secondAttribute="bottom" constant="16" id="okd-do-vtx"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="l9U-w2-AtY" secondAttribute="trailing" constant="16" id="rLc-3D-erH"/>
-                            <constraint firstItem="l9U-w2-AtY" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="16" id="ygR-Qv-kdw"/>
+                            <constraint firstItem="l9U-w2-AtY" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="pDe-qA-PYQ"/>
+                            <constraint firstItem="l9U-w2-AtY" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="wJQ-dX-buZ"/>
                         </constraints>
                     </view>
                 </viewController>
