--- a/PhotoApp/PhotoApp/XibView/GalleryViewController.xib
+++ b/PhotoApp/PhotoApp/XibView/GalleryViewController.xib
@@ -10,7 +10,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="GalleryViewController" customModule="PhotoApp" customModuleProvider="target">
             <connections>
-                <outlet property="imageView" destination="yN6-OP-0pe" id="az4-T6-dMq"/>
+                <outlet property="collectionView" destination="I0A-cP-LKa" id="YpH-X6-q6f"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -39,19 +39,26 @@
                         <action selector="plusButton:" destination="-1" eventType="touchUpInside" id="hdr-mU-PHG"/>
                     </connections>
                 </button>
-                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="yN6-OP-0pe">
+                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="I0A-cP-LKa">
                     <rect key="frame" x="16" y="109.33333333333331" width="361" height="692.66666666666674"/>
-                </imageView>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="5E4-KI-WzK">
+                        <size key="itemSize" width="128" height="128"/>
+                        <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                        <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                        <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                    </collectionViewFlowLayout>
+                </collectionView>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="yN6-OP-0pe" secondAttribute="trailing" constant="16" id="Bav-Nh-lY4"/>
-                <constraint firstItem="yN6-OP-0pe" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="16" id="WRY-99-DD5"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="I0A-cP-LKa" secondAttribute="trailing" constant="16" id="MdK-rz-uDg"/>
                 <constraint firstItem="DJI-fX-Kq1" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="bT2-wZ-1ce"/>
-                <constraint firstItem="yN6-OP-0pe" firstAttribute="top" secondItem="s6i-V8-hep" secondAttribute="bottom" constant="16" id="jIW-o9-J3d"/>
+                <constraint firstItem="I0A-cP-LKa" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="16" id="iQl-fv-yj7"/>
+                <constraint firstItem="I0A-cP-LKa" firstAttribute="top" secondItem="s6i-V8-hep" secondAttribute="bottom" constant="16" id="oql-Z4-Y66"/>
                 <constraint firstItem="s6i-V8-hep" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="owZ-Md-Odk"/>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="yN6-OP-0pe" secondAttribute="bottom" constant="16" id="rq1-pT-RIL"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="I0A-cP-LKa" secondAttribute="bottom" constant="16" id="r7p-03-nF1"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="DJI-fX-Kq1" secondAttribute="trailing" constant="16" id="sk2-b9-yjE"/>
                 <constraint firstItem="s6i-V8-hep" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="16" id="uCR-ke-8se"/>
             </constraints>
