--- a/PhotoApp/PhotoApp/XibView/LoginViewController.xib
+++ b/PhotoApp/PhotoApp/XibView/LoginViewController.xib
@@ -312,6 +312,9 @@
                                             <rect key="frame" x="0.0" y="0.0" width="120.33333333333333" height="105.33333333333333"/>
                                             <state key="normal" title="Button"/>
                                             <buttonConfiguration key="configuration" style="plain"/>
+                                            <connections>
+                                                <action selector="faceIDButton:" destination="-1" eventType="touchUpInside" id="Llc-s6-9FZ"/>
+                                            </connections>
                                         </button>
                                     </subviews>
                                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
